=========
Changelog
=========

0.2.2 (unreleased)
==================

- Allow specifying 'configure_args' on cmmi.Build or 'args' on cmmi.Configure.


0.2.1 (2013-04-18)
==================

- Fix supervisor refactoring: templates contained static paths from my
  development machine. Event listeners were not formatting the event list
  correctly.

- Let RunningSupervisor wait (infinitely) long when reloading if the
  supervisorctl command returns 'SHUTDOWN_STATE'. This supports large
  installations with many services more gracefully but might get stuck.

- Fix supervisor's Nagios check: I removed the bin/py custom interpreter and
  didn't notice it was used by the check. Put it back.

0.2 (2013-04-18)
================

- Lots of stuff that went on unreleased for way too long. Producing a release
  to allow people to stop running from trunk.

- Buildout component: Allow custom buildout.cfg names and pass the name to
  bootstrap.

- Improve SSH connection error logging: more readable now and hosts are
  identifiable. (#12093)

- Do not automatically add missing SSH host keys any longer. (#11606)

- Use python version specific virtualenv, if availble. This helps with ancient
  Python 2.4 components. For specific virtualenv versions no explicit python
  executable is passed.

- Internalize download hash handling using hashlib. Allow selection of hash
  function. (Thanks to Christine Koppelt.)

- Introduce new component modelling approach.

- Start writing documentation.

- Improve error message when download fails due to checksum mismatch.